fixed parsing response from way for pay